# minefetch

./: Cargo.toml  README.md  default.nix  flake.nix
.cargo/: config.toml
.github/workflows/: lint.yaml
src/: arguments.rs  main.rs  protocol.rs
src/formatting/: component.rs  legacy.rs  mod.rs
