[package]
name = "minefetch"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
base64 = "0"
clap = { version = "4", features = ["derive"] }
color-eyre = "0"
crossterm = "0"
image = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "io-util",
  "net",
  "macros",
  "rt-multi-thread",
] }
viuer = { version = "0", features = ["sixel"] }
